solid button group overflow button color fixes

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -88,3 +88,32 @@ form.no-top-margin .clr-form-control {
     padding: 0;
   }
 }
+
+.btn-group {
+  &.btn-success .dropdown-toggle {
+    border-color: var(--clr-btn-success-border-color);
+    background-color: var(--clr-btn-success-bg-color);
+
+    &:active {
+      box-shadow: 0 0.1rem 0 0 var(--clr-btn-success-box-shadow-color) inset;
+    }
+
+    &:hover {
+      background-color: var(--clr-btn-success-hover-bg-color);
+    }
+  }
+
+  &.btn-warning .dropdown-toggle,
+  &.btn-danger .dropdown-toggle {
+    border-color: var(--clr-btn-danger-border-color);
+    background-color: var(--clr-btn-danger-bg-color);
+
+    &:active {
+      box-shadow: 0 0.1rem 0 0 var(--clr-btn-danger-box-shadow-color) inset;
+    }
+
+    &:hover {
+      background-color: var(--clr-btn-danger-hover-bg-color);
+    }
+  }
+}
